--- a/index.html
+++ b/index.html
@@ -71,31 +71,31 @@
 								<div class="swiper-slide">
 									<div
 										class="hero__image"
-										style="background-image: url(../images/hero-images-1.jpg)"
+										style="background-image: url(./images/hero-images-1.jpg)"
 									></div>
 								</div>
 								<div class="swiper-slide">
 									<div
 										class="hero__image"
-										style="background-image: url(../../images/hero-img-2.jpg)"
+										style="background-image: url(./images/hero-img-2.jpg)"
 									></div>
 								</div>
 								<div class="swiper-slide">
 									<div
 										class="hero__image"
-										style="background-image: url(../../images/hero-img-3.jpg)"
+										style="background-image: url(./images/hero-img-3.jpg)"
 									></div>
 								</div>
 								<div class="swiper-slide">
 									<div
 										class="hero__image"
-										style="background-image: url(../../images/hero-img-4.jpg)"
+										style="background-image: url(./images/hero-img-4.jpg)"
 									></div>
 								</div>
 								<div class="swiper-slide">
 									<div
 										class="hero__image"
-										style="background-image: url(../../images/hero-img-5.jpg)"
+										style="background-image: url(./images/hero-img-5.jpg)"
 									></div>
 								</div>
 							</div>
